# pytest_intro

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  database.db  pyproject.toml
.github/workflows/: main.yaml
pytest_intro/: app.py  commands.py  database.db  init_db.py  models.py  queries.py
tests/: conftest.py  test_pytest_intro.py
tests/test_article/: test_app.py  test_commands.py  test_queries.py
