[tool.poetry]
name = "pytest_intro"
version = "0.1.0"
description = ""
authors = ["internetmosquito <alejandrovillamarin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
email-validator = "^1.1.3"
jsonschema = "^3.2.0"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.12.1"
requests = "^2.26.0"
flake8 = "^3.9.2"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
